[gd_scene load_steps=10 format=3 uid="uid://d3e8cdf1tb828"]

[ext_resource type="Script" path="res://Scripts/Components/storage.gd" id="1_wqbfa"]
[ext_resource type="Texture2D" uid="uid://bei2ofbrleka8" path="res://Ressources/Sprite/Building/Buildinng Sprite Rework/storage_background.png" id="2_gol58"]
[ext_resource type="Texture2D" uid="uid://dnm053u7gc81t" path="res://Ressources/Sprite/Building/Buildinng Sprite Rework/border_0.png" id="3_ddsbf"]
[ext_resource type="PackedScene" uid="uid://b1ku2igmg36dd" path="res://Scenes/UI/entity_inventory_ui.tscn" id="4_gw1mp"]
[ext_resource type="Texture2D" uid="uid://ckccbkdtj47co" path="res://Ressources/Sprite/UI/Buttons/inventory_button.png" id="5_g5a4n"]
[ext_resource type="Texture2D" uid="uid://dv5dva8vctu1h" path="res://Ressources/Sprite/UI/Buttons/inventory_button_pressed.png" id="6_o5vi4"]
[ext_resource type="Texture2D" uid="uid://cjvnwurn261gg" path="res://Ressources/Sprite/UI/Buttons/button_push.png" id="7_k4r1r"]
[ext_resource type="Texture2D" uid="uid://xvehqtqcf1wd" path="res://Ressources/Sprite/UI/Buttons/button_pop.png" id="8_tv04m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_n0jp6"]
radius = 33.0792

[node name="SmallStorage" type="Area2D" groups=["building", "selectable"]]
texture_filter = 1
scale = Vector2(1.3, 1.3)
script = ExtResource("1_wqbfa")
transfer_time = 1

[node name="StorageSprite" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_gol58")

[node name="StorageBorder" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
z_index = -1
scale = Vector2(2, 2)
texture = ExtResource("3_ddsbf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_n0jp6")

[node name="InventoryUI" parent="." instance=ExtResource("4_gw1mp")]
offset_left = -175.0
offset_top = -49.0
offset_right = -175.0
offset_bottom = -49.0

[node name="StorageButtonContainer" type="HBoxContainer" parent="."]
offset_left = -34.0
offset_top = 50.0
offset_right = 34.0
offset_bottom = 83.0

[node name="InventoryButton" type="TextureButton" parent="StorageButtonContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("5_g5a4n")
texture_pressed = ExtResource("6_o5vi4")

[node name="InventoryModeButton" type="TextureButton" parent="StorageButtonContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("7_k4r1r")
texture_pressed = ExtResource("8_tv04m")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="toggled" from="StorageButtonContainer/InventoryButton" to="InventoryUI" method="_on_inventory_button_toggled"]
[connection signal="toggled" from="StorageButtonContainer/InventoryModeButton" to="." method="_on_inventory_mode_button_toggled"]
